--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=b883324532ff605805a744158982f7e2
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:passer123@127.0.0.1:3306/argent-transfert?serverVersion=5.7
+DATABASE_URL=mysql://root:passer123@127.0.0.1:3306/demo_transfert?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
@@ -35,5 +35,5 @@ CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=moussa
+JWT_PASSPHRASE=seck
 ###< lexik/jwt-authentication-bundle ###
